feat: Update Tree Bark rendering logic and texture coordinates for improved visuals